add_users#edit,#update

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,4 +3,5 @@
   <td><%= user.name %></td>
   <td><%= user.email %></td>
   <td><%= link_to "View", user %></td>
+  <td><%= link_to "Edit", edit_user_path(user) %></td>
 </tr>
