add_users#new,#create

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h2>Users</h2>
+  <p>Create new user <%= link_to "here", new_user_path %></p>
         
   <table class="table">
     <thead>
