--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,22 @@
     </div>
   </div>
 
+  <% if user.new_record? %>
+    <div class="form-group">
+      <%= f.label :password, class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= f.password_field :password, class: "form-control" %>
+      </div>
+    </div>
+
+  <div class="form-group">
+    <%= f.label :password_confirmation, class: "control-label col-sm-2" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
+  </div>
+  <% end %>
+
   <div class="form-group">        
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
