--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,4 +4,5 @@
   <td><%= user.email %></td>
   <td><%= link_to "View", user %></td>
   <td><%= link_to "Edit", edit_user_path(user) %></td>
+  <td><%= link_to "Delete", user_path(user), method: :delete, data: { confirm: "Are you sure ?" } %></td>
 </tr>
