--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for user, html: {class: "form-horizontal"} do |f| %>
+<%= form_for user, html: {class: "form-horizontal"}, validate: true do |f| %>
   <%= render "shared/error_messages", object: user if user.errors.any? %>
 
   <div class="form-group">
-    <%= f.label :name, class: "control-label col-sm-2" %>
+    <%= f.label :name, class: "control-label col-sm-2", validate: true %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: "form-control" %>
     </div>
